--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/typography": "^0.5.16",
     "gray-matter": "^4.0.3",
+    "highlight.js": "^11.11.1",
     "mermaid": "^11.9.0",
     "next": "15.4.5",
     "react": "19.1.0",
