--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "@tailwindcss/typography": "^0.5.16",
     "gray-matter": "^4.0.3",
+    "hast-util-to-html": "^9.0.5",
     "highlight.js": "^11.11.1",
+    "mdast-util-to-hast": "^13.2.0",
+    "mdast-util-toc": "^7.1.0",
     "mermaid": "^11.9.0",
     "next": "15.4.5",
     "react": "19.1.0",
@@ -25,11 +28,13 @@
     "remark-math": "^6.0.0",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.2",
-    "unified": "^11.0.5"
+    "unified": "^11.0.5",
+    "vfile": "^6.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/mdast": "^4.0.4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
